--- a/hola.html
+++ b/hola.html
@@ -13,6 +13,9 @@
 
     </header>
     <main>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus sapiente eaque ipsam quo eligendi quia vel, incidunt alias molestiae voluptate ea nemo velit. Veritatis labore optio a praesentium pariatur blanditiis.
+        </p>
     </main>
     <footer>
         esto es un footer
