--- a/hola.html
+++ b/hola.html
@@ -13,6 +13,15 @@
 
     </header>
     <main>
+        <p>
+            segundo parrafo
+        </p>
+        <h1>
+            primer h1
+        </h1>
+        <h1>
+            segundo h1
+        </h1>
     </main>
     <footer>
         esto es un footer
